# torrent-scanner

./: .gitignore  METADATA.json  README.md  USAGE.md  example.py  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  torrent_scanner.py
tests/: test_bencode.py  test_cli.py  test_database.py  test_filesystem.py  test_new_api.py  test_query_methods.py  test_torrent_parsing.py
torrent_scanner/: __init__.py  api.py  bencode.py  cli.py  filesystem.py  models.py  scanner.py  torrent.py
