[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torrent_scanner"
version = "0.1.0"
description = "Index .torrent files and match on-disk data"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Philip Orange", email = "git@philiporange.com" }
]
keywords = ["torrent", "bittorrent", "scanner", "bencode", "sqlite", "peewee", "redislite"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Utilities",
]
dependencies = [
  "peewee>=3.17.0",
  "redislite>=6.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]

[project.scripts]
torrent-scanner = "torrent_scanner.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["torrent_scanner", "torrent_scanner.*"]

